WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95921
SharedGraphicsContext3D shouldn't depend on CCProxy
https://bugs.webkit.org/show_bug.cgi?id=95921
Summary
SharedGraphicsContext3D shouldn't depend on CCProxy
James Robinson
Reported
2012-09-05 18:22:20 PDT
SharedGraphicsContext3D shouldn't depend on CCProxy
Attachments
Patch
(2.17 KB, patch)
2012-09-05 18:22 PDT
,
James Robinson
enne
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-09-05 18:22:57 PDT
Created
attachment 162387
[details]
Patch
Adrienne Walker
Comment 2
2012-09-05 18:39:48 PDT
Comment on
attachment 162387
[details]
Patch R=me.
James Robinson
Comment 3
2012-09-06 11:12:53 PDT
Committed
r127762
: <
http://trac.webkit.org/changeset/127762
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug