SharedGraphicsContext3D shouldn't depend on CCProxy https://bugs.webkit.org/show_bug.cgi?id=95921

Reviewed by Adrienne Walker.

This class just wants to ASSERT() that we're on or not on the main thread. There's perfectly fine cross-platform
code in WTF to do that.

* platform/graphics/gpu/SharedGraphicsContext3D.cpp:
(WebCore::SharedGraphicsContext3D::getForImplThread):
(WebCore::SharedGraphicsContext3D::haveForImplThread):
(WebCore::SharedGraphicsContext3D::createForImplThread):

git-svn-id: svn://svn.chromium.org/blink/trunk@127762 bbb929c8-8fbe-4397-9dbb-9b2b20218538