third_party/WebKit/Source/WebCore/platform/graphics/gpu/SharedGraphicsContext3D.cpp
@@ -29,8 +29,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "SharedGraphicsContext3D.h"
 
-#include "CCProxy.h"
 #include "Extensions3D.h"
+#include <wtf/MainThread.h>
 
 namespace WebCore {
 
@@ -90,19 +90,19 @@ static PassRefPtr<GraphicsContext3D> getOrCreateContextForImplThread(ContextOper
 
 PassRefPtr<GraphicsContext3D> SharedGraphicsContext3D::getForImplThread()
 {
-    ASSERT(CCProxy::isImplThread());
+    ASSERT(!isMainThread());
     return getOrCreateContextForImplThread(Get);
 }
 
 bool SharedGraphicsContext3D::haveForImplThread()
 {
-    ASSERT(CCProxy::isMainThread());
+    ASSERT(isMainThread());
     return getOrCreateContextForImplThread(Get);
 }
 
 bool SharedGraphicsContext3D::createForImplThread()
 {
-    ASSERT(CCProxy::isMainThread());
+    ASSERT(isMainThread());
     return getOrCreateContextForImplThread(Create);
 }
 
